==> CYFS3/sdk-bsp-gd32h77d-realthread-ginopi/libraries/gd32_drivers/drv_pwm.c <==
#include <board.h>
#include <rtdevice.h>
#include <rtthread.h>
#define LOG_TAG "drv.pwm"
#include <rtdbg.h>
#define MAX_PERIOD 65535
#define MIN_PERIOD 3
#define MIN_PULSE  2

static rt_err_t drv_pwm_enable(struct gd32_pwm *pwm, const struct rt_pwm_configuration *configuration,
                               rt_bool_t enable)
{
    const channel_type *channel = pwm_channel_get(pwm, configuration);

    if (channel == RT_NULL)
    {
        return -RT_EINVAL;
    }
    if (!enable)
    {
        gpio_config_input(channel);
        if (configuration->complementary == RT_TRUE)
        {
            timer_channel_complementary_output_state_config(pwm->timerx, configuration->channel-1,
                TIMER_CCXN_DISABLE);
        }
        else
        {
            timer_channel_output_state_config(pwm->timerx, configuration->channel-1,
                TIMER_CCX_DISABLE);
        }
    }
    else
    {
        gpio_config_pwmout(channel);
        if (configuration->complementary == RT_TRUE)
        {
            timer_channel_complementary_output_state_config(pwm->timerx, configuration->channel-1,
                TIMER_CCXN_ENABLE);
        }
        else
        {
            timer_channel_output_state_config(pwm->timerx, configuration->channel-1,
                TIMER_CCX_ENABLE);
        }
    }

    return RT_EOK;
}

static rt_err_t drv_pwm_get(const struct gd32_pwm *pwm, struct rt_pwm_configuration *configuration)
{
    rt_uint64_t tim_clock;
    rt_uint16_t psc;
    rt_uint32_t chxcv;

    if (pwm_channel_get(pwm, configuration) == RT_NULL)
    {
        return -RT_EINVAL;
    }

    rt_uint8_t coef = (RCU_CFG1&RCU_CFG1_TIMERSEL)?4:2;
    tim_clock = rcu_clock_freq_get(pwm->apb_of)*coef;

    psc = timer_prescaler_read(pwm->timerx);
    if (psc == TIMER_CKDIV_DIV2)
    {
        tim_clock = tim_clock / 2;
    }
    else if (psc == TIMER_CKDIV_DIV4)
    {
        tim_clock = tim_clock / 4;
    }

    chxcv = timer_channel_capture_value_register_read(pwm->timerx, configuration->channel-1);
    /* Convert nanosecond to frequency and duty cycle. 1s = 1 * 1000 * 1000 * 1000 ns */
    tim_clock             /= 1000000UL;
    configuration->period  = (TIMER_CAR(pwm->timerx) + 1) * (psc + 1) * 1000UL / tim_clock;
    configuration->pulse   = (chxcv + 1) * (psc + 1) * 1000UL / tim_clock;

    return RT_EOK;
}

static rt_err_t drv_pwm_set(struct gd32_pwm *pwm, struct rt_pwm_configuration *configuration)
{
    rt_uint32_t period, pulse;
    rt_uint64_t tim_clock, psc;

    rt_uint8_t coef = (RCU_CFG1&RCU_CFG1_TIMERSEL)?4:2;
    tim_clock = rcu_clock_freq_get(pwm->apb_of)*coef;

    if (pwm_channel_get(pwm, configuration) == RT_NULL)
    {
        return -RT_EINVAL;
    }

    /* Convert nanosecond to frequency and duty cycle. 1s = 1 * 1000 * 1000 * 1000 ns */
    tim_clock /= 1000000UL;
    period     = (unsigned long long)configuration->period * tim_clock / 1000ULL;
    psc        = period / MAX_PERIOD + 1;
    period     = period / psc;

    timer_prescaler_config(pwm->timerx, psc - 1, TIMER_PSC_RELOAD_NOW);

    if (period < MIN_PERIOD)
    {
        period = MIN_PERIOD;
    }

    timer_autoreload_value_config(pwm->timerx, period - 1);

    pulse = (unsigned long long)configuration->pulse * tim_clock / psc / 1000ULL;
    if (pulse < MIN_PULSE)
    {
        pulse = MIN_PULSE;
    }
    else if (pulse > period)
    {
        pulse = period;
    }

    timer_channel_output_pulse_value_config(pwm->timerx, configuration->channel-1, pulse);
    timer_counter_value_config(pwm->timerx, 0);

    /* Update frequency value */
    timer_event_software_generate(pwm->timerx, TIMER_EVENT_SRC_UPG);

    return RT_EOK;
}

static rt_err_t drv_pwm_control(struct rt_device_pwm *device, int cmd, void *arg)
{
    struct rt_pwm_configuration *configuration = (struct rt_pwm_configuration *)arg;
    struct gd32_pwm *pwm = rt_container_of(device, struct gd32_pwm, pwm_device);

    switch (cmd)
    {
    case PWM_CMD_ENABLE:
        return drv_pwm_enable(pwm, configuration, RT_TRUE);
    case PWM_CMD_DISABLE:
        return drv_pwm_enable(pwm, configuration, RT_FALSE);
    case PWM_CMD_SET:
        return drv_pwm_set(pwm, configuration);
    case PWM_CMD_GET:
        return drv_pwm_get(pwm, configuration);
    default:
        return -RT_EINVAL;
    }
}

static rt_err_t gd32_hw_pwm_init(void)
{
    if (rcu_config() != RT_EOK)
    {
        return -RT_ERROR;
    }
    timer_config();

    /*
     * GPIO is not configured here. When PWM channel is enabled, it will be configured as PWM output.
     * When disabled, it will be configured as floating input.
     * GPIO defaults to floating input.
    */

    return RT_EOK;
}
